# version-control-system

./: README.md
api/: Cargo.toml
api/src/: main.rs
api/src/controllers/: auth.rs  mod.rs  repositories.rs
api/src/controllers/middlewares/: auth.rs
api/src/models/: repositories.rs  user.rs
api/src/repositories/: repositories.rs
cli/: Cargo.toml  README.md
cli/src/: handlers.rs  main.rs  utils.rs
cli/src/handlers/: commands.rs  queries.rs
cli/src/utils/: constants.rs  dates.rs  fs_provider.rs  mod.rs  s3_provider.rs  types.rs
src/: files.rs  handlers.rs  main.rs  utils.rs
